--- a/pages/fetch-api/index.html
+++ b/pages/fetch-api/index.html
@@ -21,10 +21,10 @@
       </a>
     </header>
   </div>
-  <div class="container py-5">
-    <h1 class="text-center mb-4">Pens</h1>
+  <div class="container">
+    <h1>Single Pen</h1>
     <hr>
-    <div class="row justify-content-center" id="pen-list"></div>
+    <div class="row justify-content-center" id="single-pen"></div>
   </div>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
